Refactor(TypeChanger) : 검증 후 리스트로 만들도록 변경